<resources>
    <string name="app_name">Travel Mate</string>
    <string name="navigation_drawer_open">Travel Guide</string>
    <string name="navigation_drawer_close">Travel Guide</string>
    <string name="email_id">Email id</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="signup">Signup</string>
    <string name="text_login"><u>Already a member? Login</u></string>
    <string name="text_signup_or"><u>Not registered yet? Create new account</u></string>
    <string name="empty_description">No description available.</string>
    <string name="toast_invalid_username_or_passsword">Invalid Username or Password.</string>



    <!--Drawer String-->
    <string name="navigation_drawer_destination">Destinations</string>
    <string name="navigation_drawer_travel">Travel</string>
    <string name="navigation_drawer_utilities">Utilities</string>
    <string name="navigation_drawer_extras">Extras</string>
    <string name="navigation_drawer_emergency_contact">Emergency Contacts</string>
    <string name="navigation_drawer_signout">Sign Out</string>

    <string name="signout_message">Are you sure want to sign out?</string>
    <string name="positive_button">OK</string>
    <string name="negative_button">CANCEL</string>

    <!-- Emergency contact strings -->
    <string name="emergency_call">Call</string>
    <string name="emergency_police">POLICE</string>
    <string name="emergency_fire">FIRE</string>
    <string name="emergency_ambulance">AMBULANCE</string>
    <string name="emergency_blood_bank">Blood Bank Organisation</string>
    <string name="emergency_bomb_disposal">Bomb Disposal Squad</string>
    <string name="emergency_railways">Railways Enquiry</string>

    <!-- Share contact strings -->
    <string name="share_contact_text">Share Contact</string>
    <string name="share_contact">Share My Contact</string>
    <string name="view_contact">View someone Contact</string>

    <!-- Checklist strings -->
    <string name="text_checklist">Checklist</string>
    <string name="enter_task_name">Enter task name</string>

    <!-- Activity Title strings -->
    <string name="title_activity_login">Login</string>
    <string name="title_activity_select_city">Select City</string>
    <string name="title_activity_select__mode_of_transport">Select Mode of Transport</string>
    <string name="title_activity_car_directions">Car Directions</string>
    <string name="title_activity_shopping_currentcity">Shopping current city</string>
    <string name="title_activity_train_list">TrainList</string>
    <string name="title_activity_hotels">Hotels</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_fun_facts">FunFacts</string>

    <!-- Errors and messages -->
    <string name="msg_qr_not_saved">QR code image could not be saved. Check your SD card is available</string>
    <string name="msg_saved">QR code image was saved as</string>
    <string name="source_dest_cant_be_same">Source and destination cannot be same</string>
    <string name="source_dest_set">Source and destination set</string>
    <string name="internet_connectivity">No Internet Connectivity</string>
    <string name="passwords_check">Passwords do not match!</string>
    <string name="location_enabled">Location enabled</string>
    <string name="location_not_enabled">Location not enabled</string>

    <!-- Sample Data -->
    <string name="sample_state">Delhi</string>
    <string name="sample_string">Also known as Bahai Temple, Lotus Temple is one of the finest crafted structures is in Delhi. Also known as Bahai Temple, Lotus Temple is one of the finest crafted structures is in Delhi
    Also known as Bahai Temple, Lotus Temple is one of the finest crafted structures is in Delhi. Also known as Bahai Temple, Lotus Temple is one of the finest crafted structures is in Delhi
    Also known as Bahai Temple, Lotus Temple is one of the finest crafted structures is in Delhi</string>

    <!-- Travel home page strings -->
    <string name="transport">TRANSPORT</string>
    <string name="hotel">HOTEL BOOKING</string>
    <string name="online_Shopping">ONLINE SHOPPING</string>
    <string name="real_time_locator">REAL TIME LOCATOR</string>
    <string name="my_trips">MY TRIPS</string>
    <string name="fun_facts">Fun Facts</string>

    <!-- Constant texts -->
    <string name="text_to">TO</string>
    <string name="text_change">Change</string>
    <string name="text_mileage">Mileage</string>
    <string name="text_travel_cost">Travel Cost </string>
    <string name="text_toll">Toll </string>
    <string name="text_hangout">Hangout</string>
    <string name="text_monuments">Monuments</string>
    <string name="text_shopping">Shopping</string>
    <string name="text_restaurants">Restaurants</string>
    <string name="text_city_trends">City Trends</string>
    <string name="text_cart">Car</string>
    <string name="text_train">Train</string>
    <string name="text_max">max</string>
    <string name="text_min">min</string>
    <string name="text_go">Go</string>
    <string name="text_locate">Locate</string>
    <string name="text_more">More</string>
    <string name="text_title">Title</string>
    <string name="text_call">Call</string>
    <string name="text_book">Book</string>
    <string name="text_share_screenshot">Share screenshot</string>
    <string name="text_my_trips">My Trips</string>
    <string name="unknown_value">…</string>

    <!-- My Trip Strings -->
    <string name="prompt_trip_name">Enter trip Name</string>
    <string name="prompt_city_name">Enter city name</string>
    <string name="prompt_start_date">Enter start date</string>
    <string name="prompt_end_date">Enter end date</string>
    <string name="prompt_add_trip">Add trip</string>
    <string name="prompt_friend_name">Enter friend name</string>
    <string name="prompt_add_friend">Add New friend</string>
    <string name="photos_of_trip">Photos of this trip : </string>
    <string name="friends_of_trip">Friends in this trip </string>
    <string name="text_started_on">Started on :  </string>
    <string name="prompt_add_new_trip">Add New Trip</string>
    <string name="progress_fetching_trip">Fetching trips…</string>
    <string name="progress_wait">Please wait…</string>
    <string name="trip_added">Trip added</string>
    <string name="friend_added">Friend added to trip</string>
    <string name="no_friend_selected">Please select a valid friend to add</string>
</resources>
