<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:orientation="vertical">

    <RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/police_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emergency_police"
        android:textColor="#88000000"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <com.andexert.library.RippleView
        android:id="@+id/more"
        rv_centered="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:id="@+id/police"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_margin="2dp"
            android:background="@color/colorPrimary"
            android:text="@string/emergency_call"
            android:textColor="#ffffff"/>

    </com.andexert.library.RippleView>

</RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/fire_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emergency_fire"
            android:textColor="#88000000"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <com.andexert.library.RippleView
            rv_centered="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <Button
                android:id="@+id/fire"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_margin="2dp"
                android:background="@color/colorPrimary"
                android:text="@string/emergency_call"
                android:textColor="#ffffff"/>

        </com.andexert.library.RippleView>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emergency_ambulance"
            android:textColor="#88000000"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <com.andexert.library.RippleView
            rv_centered="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <Button
                android:id="@+id/ambulance"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_margin="2dp"
                android:background="@color/colorPrimary"
                android:text="@string/emergency_call"
                android:textColor="#ffffff"/>

        </com.andexert.library.RippleView>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emergency_blood_bank"
            android:textColor="#88000000"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <com.andexert.library.RippleView
            rv_centered="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <Button
                android:id="@+id/blood_bank"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_margin="2dp"
                android:background="@color/colorPrimary"
                android:text="@string/emergency_call"
                android:textColor="#ffffff"/>

        </com.andexert.library.RippleView>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emergency_bomb_disposal"
            android:textColor="#88000000"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <com.andexert.library.RippleView
            rv_centered="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <Button
                android:id="@+id/bomb"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_margin="2dp"
                android:background="@color/colorPrimary"
                android:text="@string/emergency_call"
                android:textColor="#ffffff"/>

        </com.andexert.library.RippleView>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emergency_railways"
            android:textColor="#88000000"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <com.andexert.library.RippleView
            rv_centered="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <Button
                android:id="@+id/railways"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_margin="2dp"
                android:background="@color/colorPrimary"
                android:text="@string/emergency_call"
                android:textColor="#ffffff"/>

        </com.andexert.library.RippleView>

    </RelativeLayout>
</LinearLayout>